Feature/ab2d 2859 metadata initial integration (#549)
* refactor in preparation for change

* remove bfd runtime metadata retrieval

beging making changes to CoverageDriver to encapsulate paging correctly. Many tests are still failing but that is to be expected until the integration is mostly wrapped up.

* begin adjusting unit tests and fixing code

* progress tracker rewritten using metadata, unit tests passing

* Remove ContractBeneficiaries completely from source code and replace with List<CoverageSummary> concept.
* Add necessary stubs and spies for integration tests particularly concerning the CoverageDriver
* Remove unnecessary tests for contract bene search

* add cron to driver loading and refactor for git diff

* revert docker compose

* revert environment for local testing

* revert removal of SpringBootApp

* update environment variables for e2e-test support

* remove duplicate method

* report number of beneficiaries known for contract instead of processed count

* refactor leaky abstraction, mandate coverage updates for current month

* attempt to start one of a list of jobs until successful

* checkstyle whitespace issue

* decrease polling frequency due to metadata update times

* decrease polling frequency due to metadata update times

* rename handler, return job from worker service

* get rid of unused imports

* guarantee that exceptions cause a metadata coverage job to fail

Co-authored-by: wnyffenegger <will.nyffenegger@semanticbits.com>